--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="content">
     <div class="welcome">
-      <h1>Hello, I"m <strong>Jordan</strong>.<br>I"m a Software Developer.</h1>
+      <h1>Hello, I'm <strong>Jordan</strong>.<br>I'm a Software Developer.</h1>
       <div class="spacer"></div>
     </div>
 
