--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ expertise and support to others. I am seeking a Software Developer role that off
 opportunity to build on my existing skills, but also has the potential to allow me to
 learn new skills.
         </p></li>
-        <li><a href="/home/jordanbell/Downloads/html_css_js/Jordan's CV.pdf"><img src="aboutme.svg"></img></a></li>
+        <li><a href="/home/jordanbell/Downloads/html_css_js/cv.pdf"><img src="aboutme.svg"></img></a></li>
       </ul>
     </div>
 
