--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ learn new skills.
 million users</strong> every month - making it Scotland's largest job board.</p>
       </div>
       <div id="box2" class="box">
-        <div class='img_circle'><a href='https://www.github.com'><img src='github.png'></a>
+        <div class='img_circle'><a href='https://github.com/jordanscff'><img src='github.png'></a>
         </div>
         <p>My GitHub account contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
       </div>
