--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Hire Jordan</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="TitleIcon.svg" />
   <meta http-equiv='cache-control' content='no-cache'>
@@ -20,7 +21,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#home">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
 
@@ -28,7 +29,7 @@
   <div class="content">
     <div class="welcome">
       <h1>Hello, I'm <strong>Jordan</strong>.<br>I'm a Software Developer.</h1>
-      <div class="spacer"></div>
+      <a href='#about'><i class="material-icons">expand_more</i></a>
     </div>
 
     <div id="about" class="about-me">
@@ -47,18 +48,41 @@ learn new skills.
       </ul>
     </div>
 
-    <div id="projects" class="projects">
+    <div id="projects" class='projects'>
+      <ul>
+        <li>
+          <a href='https://www.s1jobs.com' target="_blank">
+          <img src='s1homepage.png'>
+          </a>
+        </li>
+        <li>
+          <h6>s1Jobs</h6>
+          <p>Working as a Developer, my role is to develop and maintain all of the sites - There are
+  13 sites in total with our biggest being s1jobs.com. This site alone is visited by over <strong>1
+  million users</strong> every month - making it Scotland's largest job board.<br><br>
+  During my time here, I have also been involved in a successful data migration project
+  for s1jobs. The s1jobs site was previously ran using Perl, with a differently structured
+  database. The migration project was to safely move the data to the newly structured
+  database, and ensure that Jobseekers and Recruiters would be able to continue to use
+  the new Python site with ease.</p>
+        </li>
+      </ul>
+    </div>
+
+    <div id="contact" class="contact">
       <div id="box1" class="box">
-        <div class='img_circle'><a href='https://www.s1jobs.com' target="_blank"><img src='s1logo.png'></a>
+        <div class='img_circle'><a href='https://www.s1jobs.com' target="_blank"><img src='linkedin.jpeg'></a>
         </div>
-        <p>Working as a Developer, my role is to develop and maintain all of the sites - There are
-13 sites in total with our biggest being s1jobs.com. This site alone is visited by over <strong>1
-million users</strong> every month - making it Scotland's largest job board.</p>
       </div>
       <div id="box2" class="box">
         <div class='img_circle'><a href='https://github.com/jordanscff'><img src='github.png'></a>
         </div>
         <p>My GitHub account contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
+      </div>
+      <div id="box3" class="box">
+        <div class='img_circle'><a href='/home/jordanbell/Downloads/html_css_js/cv.pdf'><img src='cvicon.svg'></a>
+        </div>
+        <p>You can also <a href='/home/jordanbell/Downloads/html_css_js/cv.pdf'>view</a> and contact me via my CV. This details my career life so far and my current personal projects.</p>
       </div>
     </div>
 
