--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ learn new skills.
 
     <div id="contact" class="contact">
       <div id="box1" class="box">
-        <div class='img_circle'><a href='https://www.s1jobs.com' target="_blank"><img src='linkedin.jpeg'></a>
+        <div class='img_circle'><a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank"><img src='linkedin.jpeg'></a>
         </div>
       </div>
       <div id="box2" class="box">
