--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ learn new skills.
       <div id="box1" class="box">
         <div class='img_circle'><a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank"><img src='linkedin.jpeg'></a>
         </div>
+        <p>My Linkedin gives an overview of my career so far and my education history. Check it out <a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank">here!</a></p>
       </div>
       <div id="box2" class="box">
         <div class='img_circle'><a href='https://github.com/jordanscff'><img src='github.png'></a>
