--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ learn new skills.
       <div id="box2" class="box">
         <div class='img_circle'><a href='https://github.com/jordanscff'><img src='github.png'></a>
         </div>
-        <p>My GitHub account contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
+        <p>My <a href='https://github.com/jordanscff'>GitHub account</a> contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
       </div>
       <div id="box3" class="box">
         <div class='img_circle'><a href='/home/jordanbell/Downloads/html_css_js/cv.pdf'><img src='cvicon.svg'></a>
