--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ learn new skills.
       </ul>
     </div>
 
-    <div id="projects" class='projects'>
+    <!-- This div is used for the anchor link-->
+    <div id="projects"></div>
+    
+    <div class='projects'>
       <ul>
         <li>
           <a href='https://www.s1jobs.com' target="_blank">
