--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="content">
     <div class="welcome">
       <h1>Hello, I'm <strong>Jordan</strong>.<br>I'm a Software Developer.</h1>
-      <a href='#about'><i class="material-icons">expand_more</i></a>
+      <i class="material-icons"><a href='#about'>arrow_drop_down_circle</a></i>
     </div>
 
     <div id="about" class="about-me">
@@ -50,7 +50,7 @@ learn new skills.
 
     <!-- This div is used for the anchor link-->
     <div id="projects"></div>
-    
+
     <div class='projects'>
       <ul>
         <li>
@@ -92,7 +92,7 @@ learn new skills.
 
 
     <footer>
-      <h3>Jordan Ball</h3>
+      <i class="material-icons"><a href='#home'>arrow_drop_down_circle</a></i>
     </footer>
   </div>
 
