--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ expertise and support to others. I am seeking a Software Developer role that off
 opportunity to build on my existing skills, but also has the potential to allow me to
 learn new skills.
         </p></li>
-        <li><a href="/home/jordanbell/Downloads/html_css_js/cv.pdf"><img src="aboutme2.svg"></img></a></li>
+        <li><a href="cv.pdf"><img src="aboutme2.svg"></img></a></li>
       </ul>
     </div>
 
@@ -84,9 +84,9 @@ learn new skills.
         <p>My <a href='https://github.com/jordanscff'>GitHub account</a> contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
       </div>
       <div id="box3" class="box">
-        <div class='img_circle'><a href='/home/jordanbell/Downloads/html_css_js/cv.pdf'><img src='cvicon.svg'></a>
+        <div class='img_circle'><a href='cv.pdf'><img src='cvicon.svg'></a>
         </div>
-        <p>You can also <a href='/home/jordanbell/Downloads/html_css_js/cv.pdf'>view</a> and contact me via my CV. This details my career life so far and my current personal projects.</p>
+        <p>You can also <a href='cv.pdf'>view</a> and contact me via my CV. This details my career life so far and my current personal projects.</p>
       </div>
     </div>
 
