--- a/solutions/index.html
+++ b/solutions/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Solution</title>
+  <title>Solutions</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -24,6 +24,16 @@
     </div>
   </header>
   <div class='page_landing'>
+    <div class='background_image'></div>
+    <div class='page_landing_content'>
+      <div class='page_landing_content-left'>
+        <h1>Made in Britain</h1>
+        <h3>Solutions experts based in Britain helping with all computer needs.</h3>
+      </div>
+      <div class='page_landing_content-right'>
+        <img src='queensguard.png'>
+      </div>
+    </div>
   </div>
 </body>
 </html>
