--- a/solutions/index.html
+++ b/solutions/index.html
@@ -35,5 +35,21 @@
       </div>
     </div>
   </div>
+  <div class='page_middle'>
+    <div class='page_middle_text'>
+      <h2>The Team</h2>
+      <h4>Meet our exceptionally talent team of digital natives</h4>
+    </div>
+    <div class='page_middle_face_center'>
+      <div class='page_middle_face'>
+        <div class='box'><img src='scoob.png'></div>
+        <div class='box'><img src='shaggy.png'></div>
+        <div class='box'><img src='velma.png'></div>
+        <div class='box'><img src='daphne.png'></div>
+        <div class='box'><img src='fred.png'></div>
+        <div class='box'><img src='ghost.gif'></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
