--- a/index.html
+++ b/index.html
@@ -1,100 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hire Jordan</title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <title>LBC</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="TitleIcon.svg" />
-  <meta http-equiv='cache-control' content='no-cache'>
-  <meta http-equiv='expires' content='0'>
-  <meta http-equiv='pragma' content='no-cache'>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-
-  <!-- This div is used for the anchor link-->
-  <div id="home"></div>
-
   <header>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+    <div class='left'>
+      <h1>LBC</h1>
+    </div>
+    <div class='right'>
+      <div class='right-left'></div>
+      <div class='right-right'>
+        <a href='#home'>Home</a>
+        <a href='#about'>About us</a>
+        <a href='#events'>What's on</a>
+        <a href='#teams'>Teams</a>
+        <a href='#video'>Video</a>
+        <a href='#contact'>Contact us</a>
+        <a href='http://mail.larkhallbaptist.org.uk/' target="_blank">Mail</a>
+      </div>
+    </div>
   </header>
-
-
-  <div class="content">
-    <div class="welcome">
-      <h1>Hello, I'm <strong>Jordan</strong>.<br>I'm a Software Developer.</h1>
-      <i class="material-icons"><a href='#about'>arrow_drop_down_circle</a></i>
+  <div id='home' class='page_landing'>
+    <div class='page_landing_content'>
+        <h1>HE HAS</h1>
+        <h1 id='risen'>RISEN</h1>
     </div>
-
-    <div id="about" class="about-me">
-      <ul>
-        <li>
-          <p>
-          <strong>Approachable</strong> and <strong>hard-working</strong> software developer with experience working with
-multiple languages including Python and MySQL. Aside from technical skills, I also
-pride myself on knowing extensive knowledge of the products I work on. By having
-this knowledge, I have become the go-to-person to provide solutions in my area of
-expertise and support to others. I am seeking a Software Developer role that offers the
-opportunity to build on my existing skills, but also has the potential to allow me to
-learn new skills.
-        </p></li>
-        <li><a href="cv.pdf"><img src="aboutme2.svg"></img></a></li>
-      </ul>
-    </div>
-
-    <!-- This div is used for the anchor link-->
-    <div id="projects"></div>
-
-    <div class='projects'>
-      <ul>
-        <li>
-          <a href='https://www.s1jobs.com' target="_blank">
-          <img src='s1homepage.png'>
-          </a>
-        </li>
-        <li>
-          <h6>s1Jobs</h6>
-          <p>Working as a Developer, my role is to develop and maintain all of the sites - There are
-  13 sites in total with our biggest being s1jobs.com. This site alone is visited by over <strong>1
-  million users</strong> every month - making it Scotland's largest job board.<br><br>
-  During my time here, I have also been involved in a successful data migration project
-  for s1jobs. The s1jobs site was previously ran using Perl, with a differently structured
-  database. The migration project was to safely move the data to the newly structured
-  database, and ensure that Jobseekers and Recruiters would be able to continue to use
-  the new Python site with ease.</p>
-        </li>
-      </ul>
-    </div>
-
-    <div id="contact" class="contact">
-      <div id="box1" class="box">
-        <div class='img_circle'><a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank"><img src='linkedin.jpeg'></a>
-        </div>
-        <p>My Linkedin gives an overview of my career so far and my education history. Check it out <a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank">here!</a></p>
-      </div>
-      <div id="box2" class="box">
-        <div class='img_circle'><a href='https://github.com/jordanscff'><img src='github.png'></a>
-        </div>
-        <p>My <a href='https://github.com/jordanscff'>GitHub account</a> contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
-      </div>
-      <div id="box3" class="box">
-        <div class='img_circle'><a href='cv.pdf'><img src='cvicon.svg'></a>
-        </div>
-        <p>You can also <a href='cv.pdf'>view</a> and contact me via my CV. This details my career life so far and my current personal projects.</p>
-      </div>
-    </div>
-
-
-    <footer>
-      <i class="material-icons"><a href='#home'>arrow_drop_down_circle</a></i>
-    </footer>
   </div>
-
+  <div class='homepage-content-middle'>
+    <div class='homepage-content-middle-main'>
+      <h2 id='about'>About us</h2>
+      <p class='content'>We are a group of people from all over Larkhall and the surrounding areas of Lanarkshire, and beyond.  We want to worship and learn more about God together. We are a friendly mix of people from all generations, from tiny children right through to our older members.<br>
+  At Larkhall Baptist we see ourselves as part of God’s family. We all want to be part of something exciting, in a place where God is really at work and where we can enjoy teaching, worship and fellowship together.  Because of this whoever you are, and wherever you are from, we will always aim to give a good welcome here at Larkhall Baptist.<br>
+  Bible study and worship are central to our church. We have opportunities throughout each week for people to be involved in age-appropriate Bible studies.  Our Sunday worship services help us come together to worship God and learn more through the preaching of our pastor Stuart Wadsworth.<br>
+  There are lots of activities on every week at Larkhall Baptist where you can learn more about who God is and how you can be fulfilled in Him.<br>
+  We also want you to know the joy that comes from serving a God who enriches your life and gives you meaning. We want you to experience the love that comes from a community of people working together. We want you to be a part of all that’s going on here!<br>
+    </div>
+  </div>
+  <div class='spacer'></div>
+  <div class='homepage-content-whatson'>
+    <div class='homepage-content-whatson-main'>
+      <h2 id='events'>What's on</h2>
+      <iframe class='content' id='iframe' src="https://calendar.google.com/calendar/embed?title=Larkhall%20Baptist%20Church&height=600&wkst=1&bgcolor=%23FFFFFF&src=larkhallbaptistchurchscotland%40gmail.com&color=%231B887A&ctz=Europe%2FLondon" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+  </div>
+  <div class='spacer-end'></div>
+  <div class='homepage-content-teams'>
+    <div class='homepage-content-teams-main'>
+      <h2 id='teams'>Teams</h2>
+     <p class='content'>As a Baptist Church we are made up of many people involved in many different activities that both support and maintain those who worship with us, as well as look out to our community.</p>
+     <div class='teams_card_full'>
+     <div class='teams_card'><div class='teams_card_text'><h3>Worship Team</h3><p>Every Sunday morning and evening we meet together and we praise God through song as part of our worship to Jesus.  The worship team are formed of musicians and singers who seek to honour God and lead the congregation into His presence through sung worship.</p></div></div>
+     <div class='teams_card'><div class='teams_card_text'><h3>Media Team</h3><p>Technically gifted and skilled at operating the various audio and visual facilities we have it is clear that without them we wouldn’t know what we were singing and we couldn’t hear what is going on.  The media team are a vital ingredient to our worship of God.</p></div></div>
+     <div class='teams_card'><div class='teams_card_text'><h3>Outreach Team</h3><p>The outreach team at Larkhall Baptist is made up of those who have a heart to see God impact our local community, as well as Scotland, as well as see the whole world.</p></div></div>
+     <div class='teams_card'><div class='teams_card_text'><h3>Pastoral Team</h3><p>Caring for those in the congregation is very necessary.  As we journey through life together we need support in times of crisis and times of strife and struggle.  It is wonderful to have a capable team who offer their time to quietly care for and minister to those who are in need.</p></div></div>
+   </div>
+    </div>
+  </div>
+  <div class='spacer-bottom'></div>
+  <div class='homepage-content-whatson'>
+    <div class='homepage-content-whatson-main'>
+      <h2 id='video'>Watch Live</h2>
+      <iframe id='iframe' width="560" height="315" src="https://www.youtube.com/embed/r26UY2i3rOg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+  </div>
+  <footer>
+    <p>LBC</p>
+    <p>Copyright ©2021 Larkhall Baptist Church</p>
+  </footer>
 </body>
 </html>
