--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul id='navbar_bg' class="nav navbar-nav navbar-right">
-            <li><a href="#">About</a></li>
+            <li><a href="#about_container">About</a></li>
             <li><a href="#">What's on</a></li>
             <li><a href="#">Watch</a></li>
             <li><a href="#">Contact</a></li>
@@ -34,6 +34,7 @@
         <div id='landing_page_div' class='col-12'>
           <h6>He has</h6>
           <h1>RISEN</h1>
+          <a href='#about_container'><img src='expand_more_white_24dp.svg'></a>
         </div>
       </div>
     </div>
