--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -32,12 +32,13 @@
           </ul>
       </div>
     </nav>
-    <div class='container' id='landing_container'>
-      <div class='row'>
-        <div id='landing_page_div' class='col-12'>
-          <h2>ABOUT US</h2>
-        </div>
+    <div class="container" id='landing_container'>
+    <div class="row" id='landing_page_div'>
+      <div class="col-xs-12">
+        <h2>Hello! We're</h2><br>
+        <h2 style="color:white;">LBC</h2>
       </div>
+    </div>
     </div>
     <div class='container' id='about_us'>
       <div id='about_us_border'>
