--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -38,7 +38,7 @@
         <h2>A church for everyone</h2>
       </div>
     </div>
-    </div>
+  </div>y
     <div class='container' id='music'>
       <div id='music_border'>
         <div class='row'>
