--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -35,10 +35,26 @@
     <div class="container" id='landing_container'>
     <div class="row" id='landing_page_div'>
       <div class="col-xs-12">
-        <h2>A church for everyone</h2>
+        <h2>About us</h2>
       </div>
     </div>
-  </div>y
+  </div>
+  <div id='divider_container'>
+    <div id='divider'>
+    </div>
+  </div>
+  <div class="container" id='landing_cards_container'>
+    <div class="row" id='landing_cards'>
+      <div class="col-xs-1 col-sm-3">
+      </div>
+      <div class="col-xs-10 col-sm-6" id='card_text'>
+        <h4>to Know, serve and share Christ
+        </h4>
+      </div>
+      <div class="col-xs-1 col-sm-3">
+      </div>
+    </div>
+  </div>
     <div class='container' id='music'>
       <div id='music_border'>
         <div class='row'>
