--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -45,15 +45,34 @@
   </div>
   <div class="container" id='landing_cards_container'>
     <div class="row" id='landing_cards'>
-      <div class="col-xs-1 col-sm-3">
-      </div>
-      <div class="col-xs-10 col-sm-6" id='card_text'>
-        <h4>to Know, serve and share Christ
-        </h4>
-      </div>
-      <div class="col-xs-1 col-sm-3">
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title"><strong>Location</strong></h4>
+        <p class="card-text">We are based in Larkhall. You can find us on 27 Machan Rd. ML9 1HX.</p>
+        <a target="_blank" href="https://www.google.com/maps?ll=55.733346,-3.968396&z=14&t=m&hl=en&gl=US&mapclient=embed&cid=872046526564494504" class="btn btn-primary">Get Directions</a>
       </div>
     </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title"><strong>Open to all</strong></h4>
+        <p class="card-text">We are a group of people from all over Larkhall and the surrounding areas of Lanarkshire, and beyond.  We want to worship and learn more about God together. We are a friendly mix of people from all generations, from tiny children right through to our older members.</p>
+        <a href="#" class="btn btn-primary">Learn More</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title"><strong>Timings</strong></h4>
+        <p class="card-text">Our service starts at 10:30. Currently due to COVID, you need to book in if you want to come along in person. To do this please email us.</p>
+        <a href="#" class="btn btn-primary">Contact us</a>
+      </div>
+    </div>
+  </div>
+</div>
   </div>
     <div class='container' id='music'>
       <div id='music_border'>
