--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -45,7 +45,9 @@
   </div>
   <div class="container" id='landing_cards_container'>
     <div class="row" id='landing_cards'>
-  <div class="col-sm-4">
+      <div class="col-sm-0 col-lg-3">
+      </div>
+  <div class="col-sm-4 col-lg-2">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title"><strong>Location</strong></h4>
@@ -54,16 +56,16 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-4 col-lg-2">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title"><strong>Open to all</strong></h4>
         <p class="card-text">We are a group of people from all over Larkhall and the surrounding areas of Lanarkshire, and beyond.  We want to worship and learn more about God together. We are a friendly mix of people from all generations, from tiny children right through to our older members.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
+        <a href="#values_section" class="btn btn-primary">Learn More</a>
       </div>
     </div>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-4 col-lg-2">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title"><strong>Timings</strong></h4>
@@ -72,8 +74,50 @@
       </div>
     </div>
   </div>
+  <div class="col-sm-0 col-lg-3">
+  </div>
+</div>
+</div>
+  <div class="container" id='values_section'>
+    <div class="row" id=''>
+      <div class="col-sm-0 col-md-3">
+      </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title"><strong>At Larkhall Baptist we see ourselves as part of God’s family.</strong></h4>
+        <p class="card-text">We all want to be part of something exciting, in a place where God is really at work and where we can enjoy teaching, worship and fellowship together.  Because of this whoever you are, and wherever you are from, we will always aim to give a good welcome here at Larkhall Baptist.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="card bg-dark text-white" id='values_section_img'>
+  <img class="card-img" src="Pray.svg" alt="Card image">
 </div>
   </div>
+  <div class="col-sm-0 col-md-3">
+  </div>
+</div>
+  </div>
+
+  <div class="container" id='minister_section'>
+    <div class="row" id=''>
+      <div class="col-sm-0 col-md-3">
+      </div>
+  <div class="col-sm-12 col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <img class="card-img" src="minister.jpg" alt="Card image">
+        <h4 class="card-title"><strong>Rev Stuart Wadsworth</strong></h4>
+        <p class="card-text">Rev. Stuart Wadsworth moved to Larkhall in January 1992. Before this he was minister of Kings Park Baptist church Glasgow. His theological training was at BTI Glasgow and then at the Scottish Baptist College. He has four grown-up children, one of whom is also married and now lives in Liverpool. The other three are all involved in the life and work of Larkhall Baptist. Originally Stuart and his wife Ruth came from Burnley in Lancashire. At the end of 2013 Ruth lost her battle to terminal cancer and was called home to be with the Lord.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-0 col-md-3">
+  </div>
+</div>
+  </div>
+
     <div class='container' id='music'>
       <div id='music_border'>
         <div class='row'>
