--- a/index.html
+++ b/index.html
@@ -1,100 +1,84 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Hire Jordan</title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="TitleIcon.svg" />
-  <meta http-equiv='cache-control' content='no-cache'>
-  <meta http-equiv='expires' content='0'>
-  <meta http-equiv='pragma' content='no-cache'>
-</head>
-<body>
-
-  <!-- This div is used for the anchor link-->
-  <div id="home"></div>
-
-  <header>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </header>
-
-
-  <div class="content">
-    <div class="welcome">
-      <h1>Hello, I'm <strong>Jordan</strong>.<br>I'm a Software Developer.</h1>
-      <i class="material-icons"><a href='#about'>arrow_drop_down_circle</a></i>
-    </div>
-
-    <div id="about" class="about-me">
-      <ul>
-        <li>
-          <p>
-          <strong>Approachable</strong> and <strong>hard-working</strong> software developer with experience working with
-multiple languages including Python and MySQL. Aside from technical skills, I also
-pride myself on knowing extensive knowledge of the products I work on. By having
-this knowledge, I have become the go-to-person to provide solutions in my area of
-expertise and support to others. I am seeking a Software Developer role that offers the
-opportunity to build on my existing skills, but also has the potential to allow me to
-learn new skills.
-        </p></li>
-        <li><a href="cv.pdf"><img src="aboutme2.svg"></img></a></li>
-      </ul>
-    </div>
-
-    <!-- This div is used for the anchor link-->
-    <div id="projects"></div>
-
-    <div class='projects'>
-      <ul>
-        <li>
-          <a href='https://www.s1jobs.com' target="_blank">
-          <img src='s1homepage.png'>
-          </a>
-        </li>
-        <li>
-          <h6>s1Jobs</h6>
-          <p>Working as a Developer, my role is to develop and maintain all of the sites - There are
-  13 sites in total with our biggest being s1jobs.com. This site alone is visited by over <strong>1
-  million users</strong> every month - making it Scotland's largest job board.<br><br>
-  During my time here, I have also been involved in a successful data migration project
-  for s1jobs. The s1jobs site was previously ran using Perl, with a differently structured
-  database. The migration project was to safely move the data to the newly structured
-  database, and ensure that Jobseekers and Recruiters would be able to continue to use
-  the new Python site with ease.</p>
-        </li>
-      </ul>
-    </div>
-
-    <div id="contact" class="contact">
-      <div id="box1" class="box">
-        <div class='img_circle'><a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank"><img src='linkedin.jpeg'></a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar_style.css">
+    <title>Larkhall Baptist Church</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <img class='navbar_icon' src='menu_white_24dp.svg'>
+          </button>
+          <a class="navbar-brand" id='navbar-brand' href="#">Larkhall Baptist Church</a>
+          <a class="navbar-brand" id='navbar-brand-mobile' href="#">LBC</a>
         </div>
-        <p>My Linkedin gives an overview of my career so far and my education history. Check it out <a href='https://www.linkedin.com/in/jordan-ball-ba2b98173/' target="_blank">here!</a></p>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul id='navbar_bg' class="nav navbar-nav navbar-right">
+            <li><a href="about_lbc.html">About</a></li>
+            <li><a href="#">What's on</a></li>
+            <li><a href="#">Watch</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Admin</a></li>
+          </ul>
       </div>
-      <div id="box2" class="box">
-        <div class='img_circle'><a href='https://github.com/jordanscff'><img src='github.png'></a>
+    </nav>
+    <div class='container' id='landing_container'>
+      <div class='row'>
+        <div id='landing_page_div' class='col-12'>
+          <h6>He has</h6>
+          <h1>RISEN</h1>
+          <a href='#all_are_welcome'><img src='expand_more_white_24dp.svg'></a>
         </div>
-        <p>My <a href='https://github.com/jordanscff'>GitHub account</a> contains some of the projects I've worked on. These range from HTML/CSS projects to Flutter App development designs.</p>
-      </div>
-      <div id="box3" class="box">
-        <div class='img_circle'><a href='cv.pdf'><img src='cvicon.svg'></a>
-        </div>
-        <p>You can also <a href='cv.pdf'>view</a> and contact me via my CV. This details my career life so far and my current personal projects.</p>
       </div>
     </div>
-
-
+    <div class='container' id='all_are_welcome'>
+      <div id='all_are_welcome_border'>
+        <div class='row'>
+          <div class='col-sm-12'>
+            <h3>All are welcome</h3>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-sm-12'>
+            <a href='about_lbc.html'><h5>Find out more</h5></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class='container' id='homepage_cards'>
+      <div id='homepage_cards_border'>
+        <div class='row'>
+          <div class='col-sm-12'>
+            <h3>Ask, and it will be given to you; seek, and you will find; knock, and it will be opened to you</h3>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-sm-4'>
+            <a href=''><h5>Get Help</h5></a>
+          </div>
+          <div class='col-sm-4'>
+            <a href=''><h5>Request Prayer</h5></a>
+          </div>
+          <div class='col-sm-4'>
+            <a href=''><h5>Get Support</h5></a>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
-      <i class="material-icons"><a href='#home'>arrow_drop_down_circle</a></i>
+      <p>Copyright ©2021 Larkhall Baptist Church</p>
     </footer>
-  </div>
-
-</body>
+  </body>
 </html>
+
+<!-- All things are possible with God. -->
