--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <img class='navbar_icon' src='menu_black_24dp.svg'>
+            <img class='navbar_icon' src='images/menu_black_24dp.svg'>
           </button>
           <a class="navbar-brand" id='navbar-brand' href="index.html">Larkhall Baptist Church</a>
           <a class="navbar-brand" id='navbar-brand-mobile' href="index.html">LBC</a>
@@ -92,7 +92,7 @@
   </div>
   <div class="col-sm-6 col-md-3">
     <div class="card bg-dark text-white" id='values_section_img'>
-  <img class="card-img" src="Pray.svg" alt="Card image">
+  <img class="card-img" src="images/Pray.svg" alt="Card image">
 </div>
   </div>
   <div class="col-sm-0 col-md-3">
@@ -107,7 +107,7 @@
   <div class="col-sm-12 col-md-6">
     <div class="card">
       <div class="card-body">
-        <img class="card-img" src="minister.jpg" alt="Card image">
+        <img class="card-img" src="images/minister.jpg" alt="Card image">
         <h4 class="card-title"><strong>Rev Stuart Wadsworth</strong></h4>
         <p class="card-text">Rev. Stuart Wadsworth moved to Larkhall in January 1992. Before this he was minister of Kings Park Baptist church Glasgow. His theological training was at BTI Glasgow and then at the Scottish Baptist College. He has four grown-up children, one of whom is also married and now lives in Liverpool. The other three are all involved in the life and work of Larkhall Baptist. Originally Stuart and his wife Ruth came from Burnley in Lancashire. At the end of 2013 Ruth lost her battle to terminal cancer and was called home to be with the Lord.</p>
       </div>
