--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <img class='navbar_icon' src='menu_white_24dp.svg'>
+            <img class='navbar_icon' src='images/menu_white_24dp.svg'>
           </button>
           <a class="navbar-brand" id='navbar-brand' href="#">Larkhall Baptist Church</a>
           <a class="navbar-brand" id='navbar-brand-mobile' href="#">LBC</a>
@@ -37,7 +37,7 @@
         <div id='landing_page_div' class='col-12'>
           <h6>He has</h6>
           <h1>RISEN</h1>
-          <a href='#all_are_welcome'><img src='expand_more_white_24dp.svg'></a>
+          <a href='#all_are_welcome'><img src='images/expand_more_white_24dp.svg'></a>
         </div>
       </div>
     </div>
