--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul id='navbar_bg' class="nav navbar-nav navbar-right">
             <li><a href="about_lbc.html">About</a></li>
-            <li><a href="#">What's on</a></li>
+            <li><a href="events.html">What's on</a></li>
             <li><a href="#">Watch</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Admin</a></li>
