--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="about_styles.css">
     <link rel="stylesheet" href="navbar_style_all.css">
-    <title>Larkhall Baptist Church</title>
+    <title>About us</title>
   </head>
   <body>
     <nav class="navbar navbar-inverse">
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul id='navbar_bg' class="nav navbar-nav navbar-right">
             <li><a href="about_lbc.html">About</a></li>
-            <li><a href="#">What's on</a></li>
+            <li><a href="events.html">What's on</a></li>
             <li><a href="#">Watch</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Admin</a></li>
