--- a/bootstrap/about_lbc.html
+++ b/bootstrap/about_lbc.html
@@ -134,7 +134,7 @@
       <div id='homepage_cards_border'>
         <div class='row'>
           <div class='col-sm-12' id='service_button'>
-            <a href=''><h5>Come along to a service</h5></a>
+            <a href='events.html'><h5>Come along to a service</h5></a>
           </div>
         </div>
       </div>
