--- a/bootstrap/events.html
+++ b/bootstrap/events.html
@@ -26,8 +26,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul id='navbar_bg' class="nav navbar-nav navbar-right">
             <li><a href="about_lbc.html">About</a></li>
-            <li><a href="#">What's on</a></li>
-            <li><a href="#">Watch</a></li>
+            <li><a href="events.html">What's on</a></li>
+            <li><a href="nav_files/watch.html">Watch</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Admin</a></li>
           </ul>
