--- a/bootstrap/nav_files/events.html
+++ b/bootstrap/nav_files/events.html
@@ -28,7 +28,7 @@
             <li><a href="about_lbc.html">About</a></li>
             <li><a href="events.html">What's on</a></li>
             <li><a href="watch.html">Watch</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#">Admin</a></li>
           </ul>
       </div>
