--- a/bootstrap/nav_files/contact.html
+++ b/bootstrap/nav_files/contact.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/watch_styles.css">
+    <link rel="stylesheet" href="../styles/contact_styles.css">
     <link rel="stylesheet" href="../navbar_style_all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Watch Live</title>
+    <title>Contact us</title>
   </head>
   <body>
     <nav class="navbar navbar-inverse">
@@ -36,23 +36,55 @@
     <div class="container" id='landing_container'>
     <div class="row" id='landing_page_div'>
       <div class="col-xs-12">
-        <h2>Watch Live</h2>
+        <h2>Contact us</h2>
       </div>
     </div>
   </div>
-  <div class='container' id='homepage_cards'>
-    <div id='homepage_cards_border'>
-      <div class='row'>
-        <div class='col-sm-12' id='service_button'>
-          <a href='https://www.youtube.com/channel/UCD1nJD6EZUypEjC0DFGyzRg'><h5>Click here to view all services</h5></a>
-        </div>
+  <div class="container" id='landing_cards_container'>
+    <div class="row" id='landing_cards'>
+      <div class="col-sm-0 col-lg-3">
       </div>
+  <div class="col-sm-4 col-lg-2">
+    <div class="card">
+    <div class="card-body">
+      <h4 class="card-title"><strong>EMAIL</strong></h4>
+      <p class="card-text">Contact us via email anytime. We will aim to respond to your email with 7 days.</p>
     </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item" id='email'>contact@larkhallbaptistchurch.org.uk</li>
+    </ul>
+  </div>
+  </div>
+  <div class="col-sm-4 col-lg-2">
+    <div class="card">
+    <div class="card-body">
+      <h4 class="card-title"><strong>PHONE NUMBER</strong></h4>
+      <p class="card-text">Feel free to phone us anytime. If you can't get through to us, please leave a message and we will return your call.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">01698 881223</li>
+    </ul>
+  </div>
+  </div>
+  <div class="col-sm-4 col-lg-2">
+    <div class="card">
+    <div class="card-body">
+      <h4 class="card-title"><strong>ADDRESS</strong></h4>
+      <p class="card-text">We are based in Larhall. We have parking available during events.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">27 Machan Rd,<br>Larkhall<br>ML9 1HX</li>
+    </ul>
+  </div>
+  </div>
+  <div class="col-sm-0 col-lg-3">
+  </div>
+  </div>
   </div>
   <div class="container" id='cal_container'>
   <div class="row" id='cal_div'>
     <div class="col-xs-12">
-      <iframe id='video_frame' src="https://www.youtube.com/embed/U64vSLXSiEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id='iframe' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.447770366642!2d-3.970590248365355!3d55.73334860086409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4888147f4852d017%3A0xc1a21b2137d6ca8!2sBaptist%20Church!5e0!3m2!1sen!2suk!4v1622730284536!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </div>
 </div>
