--- a/bootstrap/nav_files/about_lbc.html
+++ b/bootstrap/nav_files/about_lbc.html
@@ -28,7 +28,7 @@
             <li><a href="events.html">What's on</a></li>
             <li><a href="watch.html">Watch</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Admin</a></li>
+            <li><a href="http://mail.larkhallbaptist.org.uk/">Admin</a></li>
           </ul>
       </div>
     </nav>
@@ -70,7 +70,7 @@
       <div class="card-body">
         <h4 class="card-title"><strong>Timings</strong></h4>
         <p class="card-text">Our service starts at 10:30. Currently due to COVID, you need to book in if you want to come along in person. To do this please email us.</p>
-        <a href="#" class="btn btn-primary">Contact us</a>
+        <a href="contact.html" class="btn btn-primary">Contact us</a>
       </div>
     </div>
   </div>
