--- a/bootstrap/nav_files/contact.html
+++ b/bootstrap/nav_files/contact.html
@@ -29,7 +29,7 @@
             <li><a href="events.html">What's on</a></li>
             <li><a href="watch.html">Watch</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Admin</a></li>
+            <li><a href="http://mail.larkhallbaptist.org.uk/">Admin</a></li>
           </ul>
       </div>
     </nav>
