--- a/bootstrap/nav_files/index.html
+++ b/bootstrap/nav_files/index.html
@@ -28,7 +28,7 @@
             <li><a href="events.html">What's on</a></li>
             <li><a href="watch.html">Watch</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Admin</a></li>
+            <li><a href="http://mail.larkhallbaptist.org.uk/">Admin</a></li>
           </ul>
       </div>
     </nav>
@@ -64,13 +64,13 @@
         </div>
         <div class='row'>
           <div class='col-sm-4'>
-            <a href=''><h5>Get Help</h5></a>
+            <a href='contact.html'><h5>Get Help</h5></a>
           </div>
           <div class='col-sm-4'>
-            <a href=''><h5>Request Prayer</h5></a>
+            <a href='contact.html'><h5>Request Prayer</h5></a>
           </div>
           <div class='col-sm-4'>
-            <a href=''><h5>Get Support</h5></a>
+            <a href='events.html'><h5>Get Support</h5></a>
           </div>
         </div>
       </div>
