--- a/bootstrap/nav_files/contact.html
+++ b/bootstrap/nav_files/contact.html
@@ -51,7 +51,7 @@
       <p class="card-text">Contact us via email anytime. We will aim to respond to your email with 7 days.</p>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item" id='email'>contact@larkhallbaptistchurch.org.uk</li>
+      <li class="list-group-item" id='email'>admin@larkhallbaptist.church</li>
     </ul>
   </div>
   </div>
