--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -11,13 +11,22 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
 <div class="social_links"> <!-- Using Flexbox here as Bootstrap was collapsing them incorrectly-->
-  <a><i class="fa fa-linkedin-square"></i></a>
-  <a><i class="fa fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/jordan-ball-ba2b98173/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+  <a href="https://github.com/jordanscff" target="_blank"><i class="fa fa-github"></i></a>
   <a><i class="fa fa-file-o"></i></a>
+</div>
+
+<div class="container" id="hero_image">
+  <div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6"><h1>Hello, I'm <div style="display:inline-block;color:yellow;">Jordan.</div><br>I'm a Software Developer.<h1><i class="material-icons"><a id="down_arrow">arrow_drop_down_circle</a></i></div>
+    <div class="col-sm-3"></div>
+  </div>
 </div>
 </body>
 </html>
