--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -23,9 +23,19 @@
 
 <div class="container" id="hero_image">
   <div class="row">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-6"><h1>Hello, I'm <div style="display:inline-block;color:yellow;">Jordan.</div><br>I'm a Software Developer.<h1><i class="material-icons"><a id="down_arrow">arrow_drop_down_circle</a></i></div>
-    <div class="col-sm-3"></div>
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8"><h1>Hello, I'm <div style="display:inline-block;color:yellow;">Jordan.</div><br>I'm a Software Developer.<h1><i class="material-icons"><a id="down_arrow">arrow_drop_down_circle</a></i></div>
+    <div class="col-sm-2"></div>
+  </div>
+</div>
+
+
+<div class="container" id="portfolio_card_container">
+  <div class="row">
+    <div class="col-sm-1 col-md-2"></div>
+    <div class="col-sm-5 col-md-4" id="portfolio_card"><h2>s1jobs.com</h2></div>
+    <div class="col-sm-5 col-md-4" id="portfolio_card"><h2>larkhallbaptist.org.uk</h2></div>
+    <div class="col-sm-1 col-md-2"></div>
   </div>
 </div>
 </body>
