--- a/portfolio-bootstrap/index.html
+++ b/portfolio-bootstrap/index.html
@@ -24,7 +24,7 @@
 <div class="container" id="hero_image">
   <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-8"><h1>Hello, I'm <div style="display:inline-block;color:yellow;">Jordan.</div><br>I'm a Software Developer.<h1><i class="material-icons"><a id="down_arrow">arrow_drop_down_circle</a></i></div>
+    <div class="col-sm-8"><h1>Hello, I'm <div style="display:inline-block;color:yellow;">Jordan.</div><br>I'm a Software Developer.<h1><i class="material-icons"><a href="#portfolio_card_container" id="down_arrow">arrow_drop_down_circle</a></i></div>
     <div class="col-sm-2"></div>
   </div>
 </div>
@@ -32,9 +32,18 @@
 
 <div class="container" id="portfolio_card_container">
   <div class="row">
+    <div class="col-sm-12 col-md-12" id='portfolio_card_title'><h2>Projects</h2></div>
+  </div>
+  <div class="row">
     <div class="col-sm-1 col-md-2"></div>
-    <div class="col-sm-5 col-md-4" id="portfolio_card"><h2>s1jobs.com</h2></div>
-    <div class="col-sm-5 col-md-4" id="portfolio_card"><h2>larkhallbaptist.org.uk</h2></div>
+    <div class="col-sm-5 col-md-4" id='portfolio_cards'><div id="portfolio_card"><h2>s1jobs.com</h2></div></div>
+    <div class="col-sm-5 col-md-4" id="portfolio_cards"><div id="portfolio_card"><h2>larkhallbaptist.org.uk</h2></div></div>
+    <div class="col-sm-1 col-md-2"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-1 col-md-2"></div>
+    <div class="col-sm-5 col-md-4" id='portfolio_cards'><div id="portfolio_card"><h2>jordanball.com/clock</h2></div></div>
+    <div class="col-sm-5 col-md-4" id="portfolio_cards"><div id="portfolio_card"><h2>l1jobs.com</h2></div></div>
     <div class="col-sm-1 col-md-2"></div>
   </div>
 </div>
