--- a/js_quote/index.html
+++ b/js_quote/index.html
@@ -23,9 +23,14 @@
     <div id='container' class='button'>
       <div id='row'>
         <div id='col-sm-12'>
+          <div id='buttons'>
       <div id="quotes">
-        <button id="give-quote">Quote me</button><br><br>
-      </div><br>
+        <button>Quote</button><br><br>
+      </div>
+      <div id="advices">
+        <button>Advice</button><br><br>
+      </div>
+    </div>
       <div id='quotes-div'>
         <br>
       </div>
