--- a/js_quote/index.html
+++ b/js_quote/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir"ltr">
   <head>
     <meta charset="utf-8">
-    <title>Quote Generator</title>
+    <title>Quote/Advice Generator</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
